[package]
name = "rust-redis-pub-sub"
version = "0.1.0"
authors = ["Zac Pearson <zacfpearson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.16.0"
futures-util = { version = "0.3.0", default-features = false}
tokio = { version = "0.2", features = ["macros"] }
